fix collapse link fix #160

--- a/assets/sass/components/tab.scss
+++ b/assets/sass/components/tab.scss
@@ -114,7 +114,7 @@ ul.nav-tabs {
 }
 
 .collapsify {
-  a {
+  a[data-toggle="collapse"] {
     border-top: 3px solid $venetian-red;
     border-bottom: 1px solid $white;
     border-right: 1px solid $silver;
@@ -127,7 +127,7 @@ ul.nav-tabs {
     &:hover {text-decoration: none;}
     &:first-child {border-top: 3px solid $venetian-red;}
   }
-  a.collapse-closed {
+  a[data-toggle="collapse"].collapse-closed {
     border-top: 0px solid $white;
     border-bottom: 1px solid $silver;
     color: $empress;
